<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Question">

    <TextView
            android:id="@+id/questionView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countQuizText"
            app:layout_constraintVertical_bias="0.02" />

    <Button
            android:id="@+id/answerButton1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/answerButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
            android:id="@+id/answerButton2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/answerButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerButton1" />

    <Button
            android:id="@+id/answerButton3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/answerButton4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerButton2" />

    <Button
            android:id="@+id/answerButton4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/answerButton3" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionView"
            app:layout_constraintVertical_bias="0.076"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
            android:id="@+id/allTmerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/timerText"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back"
            app:layout_constraintVertical_bias="1.0" />

    <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/countQuizText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countQueizText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cellTmerView"
            app:layout_constraintVertical_bias="0.029" />

    <ProgressBar
            android:id="@+id/cellTmerView"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toStartOf="@+id/allTmerText"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
            android:id="@+id/kyokaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginBottom="12dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/answerButton1"
            app:layout_constraintStart_toStartOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>